// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the color of submit button when using button-color prop 1`] = `
<button type="button"
        class="r-button r-button--danger r-button--normal r-button--round r-submit-bar__button r-submit-bar__button--danger"
        style="color: white; background: red; border-color: red;"
>
  <div class="r-button__content">
  </div>
</button>
`;

exports[`should render button slot correctly 1`] = `
<div class="r-submit-bar r-safe-area-bottom">
  <div class="r-submit-bar__bar">
    Custom button
  </div>
</div>
`;

exports[`should render decimal length correctly when using decimal-length prop 1`] = `
<span class="r-submit-bar__price">
  ¥
  <span class="r-submit-bar__price-integer">
    1
  </span>
  .1
</span>
`;

exports[`should render decimal length correctly when using decimal-length prop 2`] = `
<span class="r-submit-bar__price">
  ¥
  <span class="r-submit-bar__price-integer">
    1
  </span>
</span>
`;

exports[`should render disabled submit button correctly 1`] = `
<button type="button"
        class="r-button r-button--danger r-button--normal r-button--round r-button--disabled r-submit-bar__button r-submit-bar__button--danger"
        disabled
>
  <div class="r-button__content">
  </div>
</button>
`;

exports[`should render placeholder element when using placeholder prop 1`] = `
<div class="r-submit-bar__placeholder"
     style="height: 50px;"
>
  <div class="r-submit-bar r-safe-area-bottom">
    <div class="r-submit-bar__bar">
      <button type="button"
              class="r-button r-button--danger r-button--normal r-button--round r-submit-bar__button r-submit-bar__button--danger"
      >
        <div class="r-button__content">
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`should render suffix-label correctly 1`] = `
<div class="r-submit-bar__text">
  <span>
    Label
  </span>
  <span class="r-submit-bar__price">
    ¥
    <span class="r-submit-bar__price-integer">
      1
    </span>
    .11
  </span>
  <span class="r-submit-bar__suffix-label">
    Suffix Label
  </span>
</div>
`;

exports[`should render top slot correctly 1`] = `
<div class="r-submit-bar r-safe-area-bottom">
  Custom Top
  <div class="r-submit-bar__bar">
    <button type="button"
            class="r-button r-button--danger r-button--normal r-button--round r-submit-bar__button r-submit-bar__button--danger"
    >
      <div class="r-button__content">
      </div>
    </button>
  </div>
</div>
`;
